# Airport-Car-Ubuntu20.04-Carla-0.9.13-NMPC-LatticePlanner

./: README.md
NMPC_RealCar_C/: CMakeLists.txt  README.md  launch_original_scene.py  nmpc_controller.py  package.xml  test_trailer_parking  test_trailer_parking.c  test_trailer_parking.cpp  test_trailer_parking.py  user_waypoints.csv
NMPC_RealCar_C/include/nmpc_realcar_c/: test_trailer_parking.h
NMPC_RealCar_C/include/nmpc_realcar_cpp/: test_trailer_parking.h
NMPC_RealCar_C/launch/: trailer_parking.launch
NMPC_RealCar_C/src/: ros_trailer_parking_node.cpp
