<?xml version="1.0"?>
<package format="2">
  <name>nmpc_realcar_c</name>
  <version>0.1.0</version>
  <description>C controller core and ROS1 wrapper for CARLA trailer parking</description>

  <maintainer email="steven@example.com">steven</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>carla_msgs</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>carla_msgs</exec_depend>
  <exec_depend>rospy</exec_depend>

</package>
